[gd_scene load_steps=2 format=2]

[ext_resource path="res://PlayerRelated/PlayerModel/PlayerFace/PlayerFace.gd" type="Script" id=1]

[node name="PlayerFace" type="Node2D"]
script = ExtResource( 1 )

[node name="LeftEye" type="AnimatedSprite" parent="."]

[node name="RightEye" type="AnimatedSprite" parent="."]

[node name="MouthPiece" type="AnimatedSprite" parent="."]
